--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <p>Please use the below buttons to interactively filter the displayed data.</p>
     <button type="button" value="actor" class="redButton">Actors</button>
     <button type="button" value="austrian" class="greenButton">Austrians</button>
-    <button type="button" value="author" class="yellowButton">Auto*</button>
-    <button type="button" value="american" class="chartreuseButton">Auto*</button>
-    <button type="button" value="singer" class="pinkButton">Auto*</button>
+    <button type="button" value="author" class="yellowButton">author</button>
+    <button type="button" value="american" class="chartreuseButton">american</button>
+    <button type="button" value="singer" class="pinkButton">singer</button>
     <button type="reset" value="reset" class="blueButton">Reset</button>
     <table id="persons-table">
       <tr class="table-headings">
