--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button type="button" value="actor" class="redButton">Actors</button>
     <button type="button" value="austrian" class="greenButton">Austrians</button>
     <button type="button" value="author" class="yellowButton">author</button>
-    <button type="button" value="american" class="chartreuseButton">american</button>
+    <button type="button" value="american" class="purpleButton">american</button>
     <button type="button" value="singer" class="pinkButton">singer</button>
     <button type="reset" value="reset" class="blueButton">Reset</button>
     <table id="persons-table">
