--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>See the JavaScript code which fetches and outputs the data here: <a href="main.js" target="_blank">main.js</a></p>
     <p>Please use the below buttons to interactively filter the displayed data.</p>
     <button type="button" value="actor" class="redButton">Actors</button>
-    <button type="button" value="austrian" class="greenButton">Austrians</button>
+    <button type="button" value="austria" class="greenButton">Austrians</button>
     <button type="button" value="author" class="yellowButton">author</button>
     <button type="button" value="american" class="purpleButton">american</button>
     <button type="button" value="singer" class="pinkButton">singer</button>
