--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <button type="button" value="author" class="yellowButton">Authors</button>
     <button type="button" value="american" class="purpleButton">Americans</button>
     <button type="button" value="authority" class="pinkButton">Authority</button>
+    <button type="button" value="austr" class="cyanButton">Austr*</button>
     <button type="reset" value="reset" class="blueButton">Reset</button>
     <table id="persons-table">
       <tr class="table-headings">
