--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Deaths of 2011</title>
-    <meta name="description" content="This is where you can describe what a page is for indexers and search engines">
-    <meta name="author" content="Take some credit!">
+    <meta name="description" content="Part of the miniproject run for the Computional Background Skills for Digital Humanities course">
+    <meta name="author" content="Christoph Ettl">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="text/javascript" src="main.js"></script>
   </head>
   <body>
     <h1>Deaths of 2011</h1>
-    <p>This website uses a list of names extracted from Wikipedia.</p>
+    <p>This website uses a list of names extracted from _Wikipedia_.</p>
     <p>The data which is fetched can be seen here: <a href="data/deaths.json" target="_blank">data/deaths.json</a></p>
     <p>See the JavaScript code which fetches and outputs the data here: <a href="main.js" target="_blank">main.js</a></p>
     <p>Please use the below buttons to interactively filter the displayed data.</p>
