--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <button type="button" value="american" class="purpleButton">Americans</button>
     <button type="button" value="authority" class="pinkButton">Authority</button>
     <button type="button" value="austr" class="cyanButton">Austr*</button>
+    <button type="button" value="unlucky" class="silverButton">Deaths on 13th</button>
     <button type="reset" value="reset" class="blueButton">Reset</button>
     <table id="persons-table">
       <tr class="table-headings">
