--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>Deaths of 2011</h1>
-    <p>This website uses a list of names extracted from _Wikipedia_.</p>
+    <p>This website uses a list of names extracted from <strong>Wikipedia</strong>.</p>
     <p>The data which is fetched can be seen here: <a href="data/deaths.json" target="_blank">data/deaths.json</a></p>
     <p>See the JavaScript code which fetches and outputs the data here: <a href="main.js" target="_blank">main.js</a></p>
     <p>Please use the below buttons to interactively filter the displayed data.</p>
