--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <h1>Deaths of 2011</h1>
     <p>This website uses a list of names extracted from <a href="https://en.wikipedia.org/"><strong>Wikipedia</strong></a>.</p>
-    <p>The data which is fetched can be seen here: <a href="data/deaths.json" target="_blank">data/deaths.json</a></p>
+    <p>The original list can be found <a href="https://en.wikipedia.org/w/index.php?title=2011#Deaths">here</a>.</p>
+    <p>The fetched data can be seen here: <a href="data/deaths.json" target="_blank">data/deaths.json</a></p>
     <p>See the JavaScript code which fetches and outputs the data here: <a href="main.js" target="_blank">main.js</a></p>
     <p>Please use the below buttons to interactively filter the displayed data.</p>
     <button type="button" value="actor" class="redButton">Actors</button>
