--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button type="button" value="austria" class="greenButton">Austrians</button>
     <button type="button" value="author" class="yellowButton">Authors</button>
     <button type="button" value="american" class="purpleButton">Americans</button>
-    <button type="button" value="authority" class="pinkButton">Authority</button>
+    <button type="button" value="authority" class="pinkButton" title="People of Authority">Authority</button>
     <button type="button" value="austr" class="cyanButton">Austr*</button>
     <button type="button" value="unlucky" class="silverButton" title="None were on a Friday though.">Deaths on 13th</button>
     <button type="reset" value="reset" class="blueButton">Reset</button>
