--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Deaths of 2011</title>
-    <meta name="description" content="Part of the miniproject run for the Computional Background Skills for Digital Humanities course">
+    <meta name="description" content="Part of the miniproject run for the Computational Background Skills for Digital Humanities course">
     <meta name="author" content="Christoph Ettl">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="text/javascript" src="main.js"></script>
